--- a/nb-27/ContextManagers.ipynb
+++ b/nb-27/ContextManagers.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -44,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -72,7 +68,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -88,9 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -149,9 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -172,9 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -199,9 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -249,19 +237,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      "<body>\n",
+      "<h1>\n",
+      "Page Title\n",
+      "</h1>\n",
+      "</body>\n",
+      "</html>\n"
+     ]
+    }
+   ],
    "source": [
-    "class my_context_manager(object):\n",
-    "    def __init__(self, name):\n",
-    "        self.name = name\n",
+    "class node(object):\n",
+    "    def __init__(self, text):\n",
+    "        self.text = text\n",
     "    def __enter__(self):\n",
-    "        print 'Enter', self.name\n",
+    "        print \"<{0}>\".format(self.text)\n",
     "    def __exit__(self, ex_type, ex_value, ex_tb):\n",
-    "        print 'Exit', self.name"
+    "        print \"</{0}>\".format(self.text)\n",
+    "        return True\n",
+    "    \n",
+    "with node('html'):\n",
+    "    with node('body'):\n",
+    "        with node('h1'):\n",
+    "             print 'Page Title'"
    ]
   },
   {
@@ -271,22 +277,12 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import contextlib\n",
-    "\n",
-    "@contextlib.contextmanager\n",
-    "def my_context_manager(name):\n",
-    "    print 'Enter', name\n",
-    "    yield\n",
-    "    print 'Exit', name"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -321,9 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,7 +371,7 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -405,9 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -427,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -473,9 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -495,9 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -531,6 +517,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html>\n",
+      "<body>\n",
+      "<h1>\n",
+      "Page Title\n",
+      "<\\h1>\n",
+      "<\\body>\n",
+      "<\\html>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from contextlib import contextmanager\n",
+    "\n",
+    "@contextmanager\n",
+    "def node(text):\n",
+    "    print \"<{0}>\".format(text)\n",
+    "    try:\n",
+    "        yield \n",
+    "    except:\n",
+    "        pass\n",
+    "    finally:\n",
+    "        print \"<\\{0}>\".format(text)\n",
+    " \n",
+    "with node('html'):\n",
+    "    with node('body'):\n",
+    "        with node('h1'):\n",
+    "             print 'Page Title'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entering my_ctm\n",
+      "Line1\n",
+      "Line2\n",
+      "Exiting my_ctm\n"
+     ]
+    }
+   ],
+   "source": [
+    "@contextmanager\n",
+    "def logging(text):\n",
+    "    print \"Entering {0}\".format(text)\n",
+    "    try:\n",
+    "        yield\n",
+    "    except:\n",
+    "        pass\n",
+    "    finally:\n",
+    "        print \"Exiting {0}\".format(text)\n",
+    "    \n",
+    "with logging(\"my_ctm\"):\n",
+    "    print \"Line1\"\n",
+    "    print \"Line2\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -555,9 +611,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
